--- a/prepros-6.config
+++ b/prepros-6.config
@@ -14,6 +14,18 @@
     {
       "path": "css/blocks/team.scss",
       "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "css/blocks/menu-page.scss",
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "css/blocks/delivery.css",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":true,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":\"-dist\"}"
+    },
+    {
+      "path": "css/blocks/mapandfooter.scss",
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
@@ -44,7 +56,10 @@
         "css/blocks/hero__container.scss",
         "css/blocks/we-best.scss",
         "css/blocks/people-page.scss",
-        "css/blocks/team.scss"
+        "css/blocks/team.scss",
+        "css/blocks/menu-page.scss",
+        "css/blocks/delivery.scss",
+        "css/blocks/mapandfooter.scss"
       ]
     }
   ],
