--- a/prepros-6.config
+++ b/prepros-6.config
@@ -26,12 +26,44 @@
     {
       "path": "css/blocks/mapandfooter.scss",
       "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "css/general/layout.scss",
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "css/general/media.scss",
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "css/blocks/hero-page.scss",
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "css/blocks/we-best.scss",
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "css/blocks/people-page.scss",
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "css/blocks/delivery.scss",
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "css/general/fonts.scss",
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "css/normalize.scss",
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
       "css",
-      "css/blocks"
+      "css/general"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -51,6 +83,7 @@
       "imports": [
         "css/normalize.scss",
         "css/general/fonts.scss",
+        "css/general/layout.scss",
         "css/blocks/landing-page.scss",
         "css/blocks/hero-page.scss",
         "css/blocks/hero__container.scss",
@@ -59,12 +92,13 @@
         "css/blocks/team.scss",
         "css/blocks/menu-page.scss",
         "css/blocks/delivery.scss",
-        "css/blocks/mapandfooter.scss"
+        "css/blocks/mapandfooter.scss",
+        "css/general/media.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
