--- a/prepros-6.config
+++ b/prepros-6.config
@@ -82,6 +82,7 @@
       "path": "css/main.scss",
       "imports": [
         "css/normalize.scss",
+        "css/general/media.scss",
         "css/general/fonts.scss",
         "css/general/layout.scss",
         "css/blocks/landing-page.scss",
@@ -92,8 +93,7 @@
         "css/blocks/team.scss",
         "css/blocks/menu-page.scss",
         "css/blocks/delivery.scss",
-        "css/blocks/mapandfooter.scss",
-        "css/general/media.scss"
+        "css/blocks/mapandfooter.scss"
       ]
     }
   ],
