--- a/prepros-6.config
+++ b/prepros-6.config
@@ -58,12 +58,16 @@
     {
       "path": "css/normalize.scss",
       "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "css/blocks/burghers.scss",
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
       "css",
-      "css/general"
+      "css/blocks"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -93,12 +97,13 @@
         "css/blocks/team.scss",
         "css/blocks/menu-page.scss",
         "css/blocks/delivery.scss",
-        "css/blocks/mapandfooter.scss"
+        "css/blocks/mapandfooter.scss",
+        "css/blocks/burghers.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
