--- a/prepros-6.config
+++ b/prepros-6.config
@@ -67,7 +67,8 @@
   "fileTree": {
     "expandedDirs": [
       "css",
-      "css/blocks"
+      "css/blocks",
+      "js"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -98,7 +99,8 @@
         "css/blocks/menu-page.scss",
         "css/blocks/delivery.scss",
         "css/blocks/mapandfooter.scss",
-        "css/blocks/burghers.scss"
+        "css/blocks/burghers.scss",
+        "css/blocks/mobile-menu.scss"
       ]
     }
   ],
