--- a/prepros-6.config
+++ b/prepros-6.config
@@ -65,11 +65,7 @@
     }
   ],
   "fileTree": {
-    "expandedDirs": [
-      "css",
-      "css/blocks",
-      "js"
-    ],
+    "expandedDirs": [],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
