--- a/prepros-6.config
+++ b/prepros-6.config
@@ -62,10 +62,18 @@
     {
       "path": "css/blocks/burghers.scss",
       "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "css/blocks/slick.scss",
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "css",
+      "js\\js-works№2",
+      "js"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -96,12 +104,13 @@
         "css/blocks/delivery.scss",
         "css/blocks/mapandfooter.scss",
         "css/blocks/burghers.scss",
-        "css/blocks/mobile-menu.scss"
+        "css/blocks/mobile-menu.scss",
+        "css/blocks/slick.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
