--- a/prepros-6.config
+++ b/prepros-6.config
@@ -69,11 +69,7 @@
     }
   ],
   "fileTree": {
-    "expandedDirs": [
-      "css",
-      "js\\js-works№2",
-      "js"
-    ],
+    "expandedDirs": [],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -110,7 +106,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
