--- a/prepros-6.config
+++ b/prepros-6.config
@@ -106,7 +106,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
